Set body_hfw min-height and height to 100% to correct words bleeding into header.

--- a/public_html/css/test.css
+++ b/public_html/css/test.css
@@ -19,11 +19,11 @@ body {
 }*/
 #body_hfw {
     height:100%;
+    min-height: 100%;
     width:100%;
     margin:0 auto;
     background:#ddd;
-    min-width: 1040px;
-    min-height: 1000px;
+
 }
 #header_hfw {
     padding:10px;
